force-app/main/default/objects/TestRun__c/TestRun__c.object-meta.xml
<CustomObject>
    <description>The execution of a test case.</description>
    <label>Test Run</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Test Run ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>