force-app/main/default/objects/TestRun__c/fields/MyTestRun__c.field-meta.xml
<CustomField>
    <fullName>MyTestRun__c</fullName>
    <formula>Tester__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Test Run</label>
    <type>Checkbox</type>
</CustomField>