force-app/main/default/objects/TestRun__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes or comments on this test run</description>
    <inlineHelpText>Provide info about the execution of this test run (e.g. screenshots, steps to reproduce).</inlineHelpText>
    <label>Notes/Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>