force-app/main/default/objects/TestRun__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who tested this functionality</description>
    <inlineHelpText>Owner of the test run</inlineHelpText>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>TestRuns</relationshipName>
    <type>Lookup</type>
</CustomField>