force-app/main/default/objects/TestRun__c/fields/TestRunDate__c.field-meta.xml
<CustomField>
    <fullName>TestRunDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date that test was run</description>
    <inlineHelpText>Date that test was run</inlineHelpText>
    <label>Test Run Date</label>
    <type>Date</type>
</CustomField>